--- a/index.css
+++ b/index.css
@@ -1,12 +1,205 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 :root{
-    --boxColor: #777;
-    --ballBounce: 2s;
+    --boxColor: #5577;
+    --ballColor: #1a27;
+    --ballBounce: .7s;
+    --rotateSpeed: 20s;
+    --fontSize: 70px;
 }
 
 body{
+    font-family: 'Montserrat', sans-serif;
+    margin: 0;
     background-color: #000;
     min-height: 100vh;
     display: flex;
+    overflow: hidden;
     justify-content:center;
     align-items:center;
+    font-size: var(--fontSize);
+
+    perspective: 10em;
+    perspective-origin: 50% calc(50% - 3em);
+}
+
+header{
+    padding: 20px 0;
+    background-color: #000a;
+    backdrop-filter: blur(20px);
+    width:100%;
+    position: absolute;
+    top: 0;
+    z-index: 10;
+    text-align: center;
+}
+
+h1{
+    color: var(--ballColor);
+    font-size: 50px;
+    line-height: 50px;
+    margin: 0;
+    margin-bottom: 10px;
+}
+
+header div{
+    display: flex;
+    justify-content:center;
+    align-items: center;
+}
+
+header div span{
+    background-color:rgb(255, 255, 255);
+    font-size: 30px;
+    padding: 0 10px;
+    margin: 0 70px;
+    cursor: pointer;
+}
+
+.scene{
+    position: relative;
+    transform-style: preserve-3d;
+
+    animation: rotateScene var(--rotateSpeed) linear infinite;
+}
+
+.floor{
+    position: absolute;
+    transform-style: preserve-3d;
+    top: 1em;
+    transform: 
+        translate(-50%, -50%)
+        rotateX(90deg);
+    width: 15em;
+    height: 15em;
+    background-image: 
+        radial-gradient(#0000, #000 75%),
+        repeating-conic-gradient(
+            from 45deg, 
+            #111 0deg 90deg, #222 90deg 180deg);
+    background-size: 100%,  1em 1em;
+}
+
+.ball{
+    transform-style: preserve-3d;
+    width: 1em;
+    height: 1em;
+    border-radius:50%;
+    background-color: var(--ballColor);
+
+    position: absolute;
+    left: -.5em;
+    bottom: 1em;
+
+    background-image: radial-gradient(
+        circle at top,
+        var(--ballColor), #000
+    );
+    
+    animation: 
+        rotateScene var(--rotateSpeed) linear infinite reverse,
+        ballBounce var(--ballBounce) ease-out infinite;
+}
+
+.ballShadow{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: radial-gradient(#0008, #0000 50%);
+
+    animation: scaleShadow var(--ballBounce) ease-out infinite;
+}
+
+.cube{
+    transform-style: preserve-3d;
+    width: 2em;
+    height: 2em;
+    
+    position: absolute;
+    bottom: -1em;
+    left: -1em;
+
+    animation: cubeBounce var(--ballBounce) ease-out infinite;
+}
+
+.front, .back, .left, .right{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: var(--boxColor);
+
+    box-shadow: 0 0 .5em #000a inset;
+}
+
+.front{
+    transform: translateZ(1em);
+}
+
+.left{
+    transform: rotateY(90deg) translateZ(1em);
+}
+
+.back{
+    transform: rotateY(180deg) translateZ(1em);
+}
+
+.right{
+    transform: rotateY(270deg) translateZ(1em);
+}
+
+.top{
+    position: absolute;
+    width: 2em;
+    height: 2em;
+    background-color: var(--boxColor);
+    transform: translateY(-50%) rotateX(90deg);
+    box-shadow: 0 0 .5em #000a inset;
+}
+
+.bottom{
+    position: absolute;
+    width: 2em;
+    height: 2em;
+    background-color: #000a;
+    bottom: 0;
+    transform: translateY(50%) rotateX(90deg);
+    box-shadow: 0 0 .5em #000a;
+}
+
+@keyframes rotateScene {
+    to{
+        transform: rotateY(360deg)
+    }
+}
+
+@keyframes ballBounce {
+    0%, 100%{
+        bottom: .5em;
+    }
+    50%{
+        bottom: 3em;
+        animation-timing-function: ease-in;
+    }
+}
+
+@keyframes scaleShadow {
+    0%, 100%{
+        transform: scale(1);
+        opacity: 1;
+    }
+    50%{
+        transform: scale(2);
+        opacity: .5;
+        animation-timing-function: ease-in;
+    }
+}
+
+@keyframes cubeBounce {
+    0%, 100%{
+        height: 1.5em;
+    }
+    10%, 94%{
+        height: 2em;
+    }
 }
