--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@
     --ballBounce: .7s;
     --rotateSpeed: 20s;
     --fontSize: 60px;
+    --cameraHeight: 3em;
 }
 
 body{
@@ -23,7 +24,7 @@ body{
     font-size: var(--fontSize);
 
     perspective: 10em;
-    perspective-origin: 50% calc(50% - 3em);
+    perspective-origin: 50% calc(50% - var(--cameraHeight));
 }
 
 header{
@@ -106,7 +107,7 @@ header div h1{
 
 .floor-light{
     background-image:
-        radial-gradient(#0000, #000 55%),
+        radial-gradient(#0000, #000 65%),
         repeating-conic-gradient(
             from 45deg, 
             #111 0deg 90deg, #222 90deg 180deg);
