[add]: Change color when clicking on the side

--- a/index.css
+++ b/index.css
@@ -236,6 +236,23 @@ header div h1{
 .invert{
     filter: invert(1);
 }
+
+.filter-red {
+    filter: grayscale(100%) brightness(40%) sepia(100%) hue-rotate(-50deg) saturate(600%) contrast(0.8);
+}
+
+.filter-blue {
+    filter: grayscale(100%) brightness(30%) sepia(100%) hue-rotate(-180deg) saturate(700%) contrast(0.8);
+}
+
+.filter-green {
+    filter: grayscale(100%) brightness(40%) sepia(100%) hue-rotate(50deg) saturate(1000%) contrast(0.8);
+}
+
+.filter-yellow {
+    filter: grayscale(100%) brightness(120%) sepia(90%) hue-rotate(5deg) saturate(500%) contrast(0.7);
+}
+
 @keyframes rotateScene {
     to{
         transform: rotateY(360deg)
