--- a/index.css
+++ b/index.css
@@ -39,6 +39,8 @@ header {
     display: flex;
     flex-wrap: wrap;
     transition: .3s ease;
+    justify-content: center;
+    align-items: center;
 }
 
 header div {
