--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import "header.css";
 
 :root {
     --boxColor: rgba(59, 59, 165, 0.467);
@@ -30,63 +30,6 @@ body {
 a{
     font-size: .5em;
     color: white;
-}
-
-header {
-    padding: 20px 0;
-    background-color: rgba(20, 20, 20, 0.667);
-    backdrop-filter: blur(20px);
-    width: 100%;
-    position: absolute;
-    bottom: 0;
-    z-index: 10;
-    text-align: center;
-    display: flex;
-    flex-wrap: wrap;
-    transition: .3s ease;
-    justify-content: center;
-    align-items: center;
-}
-
-header div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-header div span {
-    background-color: rgb(255, 255, 255);
-    font-size: 30px;
-    padding: 0 10px;
-    margin: 0 70px;
-    cursor: pointer;
-}
-
-header div h1 {
-    width: 50%;
-    color: var(--ballColor);
-    font-size: 30px;
-    line-height: 50px;
-    margin: 0;
-}
-
-.btn-menu {
-    position: absolute;
-    background: none;
-    width: 30px;
-    height: 30px;
-    top: -50px;
-    left: 50px;
-    background-color: rgba(20, 20, 20, 0.667);
-    padding: 10px;
-    cursor: pointer;
-    border-radius: 10px 10px 0 0;
-    transition: .3s ease;
-}
-
-.btn-menu img {
-    width: 100%;
-    height: 100%;
 }
 
 .scene {
