--- a/css/loading.css
+++ b/css/loading.css
@@ -58,8 +58,11 @@ a{
 
     transform: translate(-50%, -50%) translateZ(1em);
 
-    border: 3px solid white;
+    border: 3px solid rgb(240, 79, 79);
     border-radius: 50%;
+    box-shadow: 0 0 10px rgb(240, 79, 79),
+                0 0 25px rgb(240, 79, 79),
+                0 0 50px rgb(240, 79, 79);
     
     animation: float var(--floatSpeed) infinite ease-out;
     animation-delay: calc(.1s * var(--i));
@@ -70,8 +73,16 @@ a{
 @keyframes float{
     0%, 100%{
         transform: translate(-50%, -50%) translateZ(1em);
+        border-color: rgb(0, 255, 98);
+        box-shadow: 0 0 10px rgb(0, 255, 98),
+                    0 0 25px rgb(0, 255, 98),
+                    0 0 50px rgb(0, 255, 98);
     }
     50%{
         transform: translate(-50%, -50%) translateZ(-1em);
+        border-color: rgb(212, 0, 255);
+        box-shadow: 0 0 10px rgb(212, 0, 255),
+                    0 0 25px rgb(212, 0, 255),
+                    0 0 50px rgb(212, 0, 255);
     }
 }
